# flowchart-explorer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  azure-pipelines.yml  pyproject.toml  sample_exe.py
.github/workflows/: lint.yaml  lint_test.yaml  release.yml
charts/: example_chart.drawio  example_loop.drawio  testchart.drawio  testchart.xml  testerrchart.drawio
charts/test-drawio/: error-double-edge.drawio  error-loop-pair.drawio
charts/test-explorer/: simple_chart.drawio  simple_double_loop_chart.drawio  simple_loop_chart.drawio  triple_loop.drawio
flowchart_explorer/: chartpath.py  explorer.py  methods.py
flowchart_explorer/flowchart_diagrams/: nodes.py
flowchart_explorer/flowchartdiagrams/: nodes.py  sample.py
flowchart_explorer/graph/: drawio.py
jupyter/: diagrams.ipynb  xml.ipynb
tests/: conftest.py  test_draw.py  test_explorer.py
tests/graph/: test_drawio.py
